Fix text overflowing in safari

--- a/pages/home/pile.css
+++ b/pages/home/pile.css
@@ -1,8 +1,17 @@
+#pile-area {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 auto;
+}
+
 #pile-items {
     display: flex;
     flex-wrap: wrap;
     flex-direction: row;
+    flex-shrink: 0;
     justify-content: center;
+    width: 90vw;
 }
 
 .pile-item {
@@ -21,9 +30,7 @@
 
 .pile-item-name {
     font-size: 2.5rem;
-    width: 100%;
     white-space: pre-line;
-    overflow-wrap: normal;
 }
 
 .pile-item-desc {
@@ -32,6 +39,7 @@
 }
 
 form {
+    width: 100%;
     margin-bottom: 15px;
 }
 
@@ -134,11 +142,6 @@ textarea {
     
     .pile-item-name {
         font-size: 2rem;
-    }
-
-    .pile-item-name::after {
-        content: "\A";
-        white-space: pre;
     }
 
     .fancybox-content {
